@@ -1,3 +1,8 @@
+2002-08-04  Matthias Clasen  <maclas@gmx.de>
+
+	* gtkdoc-scangobj.in: Don't try to list signals on types which
+	don't support signals, e.g. boxed types.
+
 2002-06-14  jacob berkman  <jacob@ximian.com>
 
 	* gtkdoc-mkdb.in: do the version check before help, so --version
